# sixtracklib_gsoc18

initial_test/sixtrack-v0/: CMakeLists.txt  parallel_beam_elements.cpp
studies/study11_martin/: CMakeLists.txt  run_sample_fodo.cu
studies/study8_martin/: CMakeLists.txt  Readme.md  test_particles.cpp
